# node-gpgpu

./: .eslintcache  .eslintrc.js  .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
lib/: binding.ts  declarationTable.ts  expressionParser.ts  objectSerializer.ts  parser.ts  statementParser.ts  template.ts
src/: gpgpu.cc  gpgpu.h
test/: classes.spec.ts  test_binding.js  test_binding.spec.js  test_binding.spec.ts
